<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecoverPasswordFragment">

    <!-- TODO: Update blank fragment layout -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/recoverPassword_title"
            android:layout_width="274dp"
            android:layout_height="75dp"
            android:layout_marginStart="68dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/recover_password_title"
            android:textSize="34sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/recoverPassword_emailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="68dp"
            android:layout_marginTop="10dp"
            android:text="@string/recover_password_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recoverPassword_title" />

        <EditText
            android:id="@+id/recoverPassword_emailInput"
            android:layout_width="295dp"
            android:layout_height="67dp"
            android:layout_marginStart="68dp"
            android:layout_marginTop="12dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recoverPassword_emailText" />

        <TextView
            android:id="@+id/recoverPassword_newPasswordText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="68dp"
            android:layout_marginTop="16dp"
            android:text="TextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recoverPassword_emailInput"
            tools:text="@string/recover_password_new_password" />

        <EditText
            android:id="@+id/recoverPassword_passwordInput"
            android:layout_width="286dp"
            android:layout_height="61dp"
            android:layout_marginStart="68dp"
            android:layout_marginTop="17dp"
            android:ems="10"
            android:inputType="textPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recoverPassword_newPasswordText" />

        <TextView
            android:id="@+id/recoverPassword_confirmPasswordText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="68dp"
            android:layout_marginTop="22dp"
            android:text="TextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recoverPassword_passwordInput" />

        <EditText
            android:id="@+id/recoverPassword_confirmPasswordInput"
            android:layout_width="280dp"
            android:layout_height="54dp"
            android:layout_marginStart="68dp"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:inputType="textPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recoverPassword_confirmPasswordText" />

        <Button
            android:id="@+id/recoverPassword_recoverButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="36dp"
            android:layout_marginBottom="29dp"
            android:text="@string/recover_password_recover"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/recoverPassword_cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginBottom="29dp"
            android:text="@string/recover_password_cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/recoverPassword_messageText"
            android:layout_width="283dp"
            android:layout_height="174dp"
            android:layout_marginStart="68dp"
            android:layout_marginTop="31dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recoverPassword_confirmPasswordInput" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>